This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Compile error on Python/ceval.c without threads
Type: compile error Stage: resolved
Components: Build Versions: Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: masamoto, pitrou, vstinner
Priority: normal Keywords:

Created on 2017-07-05 07:53 by masamoto, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 2581 merged masamoto, 2017-07-05 08:01
PR 2583 merged masamoto, 2017-07-05 08:57
Messages (5)
msg297711 - (view) Author: Masayuki Yamamoto (masamoto) * Date: 2017-07-05 07:53
I found a syntax error when compiling without threads.
In that place, the colon has been used instead of semicolon at end of statement.

build commands and error log:
$ uname -a
Linux masayuki-P35-DS3 4.4.0-83-generic #106-Ubuntu SMP Mon Jun 26 17:54:25 UTC 2017 i686 i686 i686 GNU/Linux
$ git checkout master
$ ./configure --without-threads && LC_ALL=C make -j2
(snip)
gcc -c -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes    -std=c99 -Wextra -Wno-unused-result -Wno-unused-parameter -Wno-missing-field-initializers -Werror=implicit-function-declaration   -I. -I./Include    -DPy_BUILD_CORE -o Python/ceval.o Python/ceval.c
Python/ceval.c: In function 'Py_MakePendingCalls':
Python/ceval.c:551:23: error: expected ';' before ':' token
             goto error:
                       ^
Makefile:1551: recipe for target 'Python/ceval.o' failed
make: *** [Python/ceval.o] Error 1

related changeset:
3024c0529077f5cff0b32dc84b5923c8fba99a87 [3.6] bpo-30703: Improve signal delivery (GH-2415) (#2527)
c08177a1ccad2ed0d50898c2731b518c631aed14 bpo-30703: Improve signal delivery (#2415)

I open one line change PR that replaces colon with semicolon for master branch right away.
msg297716 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-07-05 08:39
New changeset 0c3116309307ad2c7f8e2d2096612f4ab33cbb62 by Victor Stinner (Masayuki Yamamoto) in branch 'master':
bpo-30854: Fix compile error when --without-threads (#2581)
https://github.com/python/cpython/commit/0c3116309307ad2c7f8e2d2096612f4ab33cbb62
msg297723 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-07-05 09:24
New changeset e3a0ff0d76b9e7a994afa7f2c54b19a63f1bb57d by Victor Stinner (Masayuki Yamamoto) in branch '3.6':
[3.6] bpo-30854: Fix compile error when --without-threads (GH-2581) (#2583)
https://github.com/python/cpython/commit/e3a0ff0d76b9e7a994afa7f2c54b19a63f1bb57d
msg297724 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-07-05 09:25
Thanks Masayuki Yamamoto for your fixes!
msg297742 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-07-05 13:44
New changeset 8207c17486baece8ed0ac42d9f8d69ecec4ba7e4 by Victor Stinner in branch 'master':
Revert "bpo-30822: Fix testing of datetime module." (#2588)
https://github.com/python/cpython/commit/8207c17486baece8ed0ac42d9f8d69ecec4ba7e4
History
Date User Action Args
2022-04-11 14:58:48adminsetgithub: 75037
2017-07-05 13:44:55vstinnersetmessages: + msg297742
2017-07-05 09:25:12vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg297724

stage: patch review -> resolved
2017-07-05 09:24:49vstinnersetmessages: + msg297723
2017-07-05 08:57:43masamotosetpull_requests: + pull_request2654
2017-07-05 08:54:38vstinnersettitle: Compile error on Python/ceval.c -> Compile error on Python/ceval.c without threads
2017-07-05 08:39:19vstinnersetnosy: + vstinner
messages: + msg297716
2017-07-05 08:21:09berker.peksagsetstage: patch review
2017-07-05 08:01:51masamotosetpull_requests: + pull_request2651
2017-07-05 07:53:20masamotocreate