[3.6] bpo-30854: Fix compile error when --without-threads (GH-2581)

* bpo-30854: Fix compile error when --without-threads

* bpo-30854: fix news
(cherry picked from commit 0c3116309307ad2c7f8e2d2096612f4ab33cbb62)